src/run_environment/gitlab_ci/snapshots/codspeed_runner__run_environment__gitlab_ci__provider__tests__fork_merge_request_run_environment_metadata.snap
---
source: src/run_environment/gitlab_ci/provider.rs
expression: run_environment_metadata
---
{
  "ref": "refs/pull/5/merge",
  "headRef": "fork-owner:feat/awesome-feature",
  "baseRef": "main",
  "owner": "owner",
  "repository": "repository",
  "event": "pull_request",
  "sender": {
    "id": "19605940",
    "login": "actor"
  },
  "localData": null,
  "repositoryRootPath": "/builds/owner/repository"
}
